Fix 404 NOT_FOUND error by adding Vercel rewrites and updating configurations

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
-  "build": {
-    "chunkSizeWarningLimit": 1000
-  }
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ]
 }
